--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,10 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.go",
-      "use": "@vercel/go@2.0.0",
-      "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "go1.22"
-      }
-    },
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "public"
-      }
+  "functions": {
+    "api/index.go": {
+      "runtime": "go1.x"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api/(.*)",
@@ -29,6 +17,7 @@
   ],
   "installCommand": "cd frontend && npm install",
   "buildCommand": "cd frontend && npm run vercel-build",
+  "outputDirectory": "frontend/public",
   "env": {
     "NODE_ENV": "production"
   }
