Update Vercel configuration to use Go runtime version 2.0.0

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/index.go": {
-      "runtime": "go1.x"
+      "runtime": "@vercel/go@2.0.0"
     }
   },
   "routes": [
