Refactor Vercel configuration and update API server implementation. Added Go version to build environment in vercel.json and simplified API structure in index.go for local testing.

--- a/vercel.json
+++ b/vercel.json
@@ -20,5 +20,10 @@
   "outputDirectory": "frontend/public",
   "env": {
     "NODE_ENV": "production"
+  },
+  "build": {
+    "env": {
+      "GO_VERSION": "1.20"
+    }
   }
 }
