Refactor Vercel configuration to use builds instead of functions for API deployment, updating the structure for better compatibility.

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.go": {
-      "runtime": "@vercel/go@3.0.0"
+  "builds": [
+    {
+      "src": "api/index.go",
+      "use": "@vercel/go@3.0.0"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
