--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "api/index.go",
-      "use": "@vercel/go@2.0.0"
+      "use": "@vercel/go@3.0.0",
+      "config": {
+        "runtime": "go1.20"
+      }
     }
   ],
   "routes": [
