Refactor Vercel configuration to use functions instead of builds for API deployment, simplifying the structure and maintaining the Go runtime version.

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,10 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.go",
-      "use": "@vercel/go@3.0.0",
-      "config": {
-        "runtime": "go1.20"
-      }
+  "functions": {
+    "api/index.go": {
+      "runtime": "@vercel/go@3.0.0"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api/(.*)",
