--- a/vercel.json
+++ b/vercel.json
@@ -12,18 +12,13 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/$1"
+      "dest": "/frontend/public/$1"
     }
   ],
   "installCommand": "cd frontend && npm install",
-  "buildCommand": "cd frontend && npm run vercel-build",
+  "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/public",
   "env": {
     "NODE_ENV": "production"
-  },
-  "build": {
-    "env": {
-      "GO_VERSION": "1.20"
-    }
   }
 }
