Fix Vercel deployment: move markdown-files to frontend/public and update API paths

--- a/vercel.json
+++ b/vercel.json
@@ -16,8 +16,5 @@
     }
   ],
   "buildCommand": "cd frontend && npm run build",
-  "outputDirectory": "frontend/public",
-  "includeFiles": [
-    "markdown-files/**"
-  ]
+  "outputDirectory": "frontend/public"
 }
