Fix file serving: use static files instead of API for markdown files

--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
       "dest": "/api/index.go"
     },
     {
+      "src": "/markdown-files/(.*)",
+      "dest": "/frontend/public/markdown-files/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/frontend/public/$1"
     }
