chore: Remove unnecessary files and update .gitignore
- Remove build artifacts (main, index, test-build)
- Remove test files (test-markdown.md, test-upload.md)
- Update .gitignore to prevent tracking of build artifacts and test files

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,16 @@ node_modules/
 .cursor
 .taskmaster
 .env.example
+
+# Build artifacts
+main
+index
+test-build
+*.exe
+*.dll
+*.so
+*.dylib
+
+# Test files
+test-*.md
+test-*.txt
